--- a/src/components/HomePage/Home/Home.module.css
+++ b/src/components/HomePage/Home/Home.module.css
@@ -1,83 +1,159 @@
-.Image{
-    width:100vw;
-    height:100vh;
-    background-image: url("../../../assets/images/pizza.jpg");
-    background-repeat:no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    transition: all .9s ease-in-out;
-}
-.Image:hover{
-    transform: scale(1.03);
+.Image {
+  width: 100vw;
+  height: 100vh;
+  /* object-fit: contain; */
+  background-color: #000000;
 }
 
-.Explore{
-    position: absolute;
-    top:80%;
-    left:44%;
+.Explore {
+  position: absolute;
+  top: 80%;
+  left: 44%;
+  z-index: 500;
 }
 
-.Explore button{
-    background-color: rgba(0, 0, 0, 0.4);
-    padding:10px 40px;
-    border:3px solid white;
-    width:200px;
-    border-radius: 30px;
-    font-size: 1rem;
-    color:white;
-    outline:none;
-    z-index:-10;
-    transition: all .3s ease;
+.Explore button {
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 10px 40px;
+  border: 3px solid white;
+  width: 200px;
+  border-radius: 30px;
+  font-size: 1rem;
+  color: white;
+  outline: none;
+  transition: all 0.3s ease;
 }
 
-.Explore button:hover{
-    background-color: #cb202d;
-    color:white;
-    font-size:1.1rem;
-    cursor:pointer;
+.Explore button:hover {
+  background-color: #cb202d;
+  color: white;
+  font-size: 1.1rem;
+  cursor: pointer;
 }
 
-.Tagline h3{
-    color: black;
-    position:absolute;
-    top:8%;
-    left:0;
-    letter-spacing: 1px;
-    font-size:40px;
-    padding: 0 0 0 10px;
+.Tagline h3 {
+  color: white;
+  position: absolute;
+  top: 8%;
+  left: 0;
+  z-index: 500;
+  letter-spacing: 1px;
+  font-size: 40px;
+  padding: 0 0 0 10px;
 }
 
-.Tagline p{
-    color:rgb(77, 74, 74);
-    position:absolute;
-    top:18%;
-    left:0;
-    font-size:20px;
-    padding:0 0 0 12px;
+.Tagline p {
+  color: white;
+  position: absolute;
+  top: 18%;
+  left: 0;
+  z-index: 500;
+  font-size: 20px;
+  padding: 0 0 0 12px;
 }
 
-.CardsContainer{
-    margin-top: 70px !important;
-    margin-bottom: 35px !important;
-    content:'';
-    height:300px;
-    width:80%;
-    margin:auto;
-    display: flex;
-    justify-content: space-around;
+.CardsContainer {
+  margin-top: 70px !important;
+  margin-bottom: 35px !important;
+  height: 300px;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
 }
 
-.Card{
-    margin:10px 0;
-    text-align: center;
-    content:'';
-    width:20%;
-    font-size:1.2rem;
+.Card {
+  margin: 10px 0;
+  text-align: center;
+  width: 20%;
+  font-size: 1.2rem;
 }
 
-.Filler p{
-    padding:8px;
-    font-size:25px;
-    color:rgb(77, 74, 74);
+.Filler p {
+  padding: 8px;
+  font-size: 25px;
+  color: rgb(77, 74, 74);
+}
+
+.Slideshow {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.Slideshow li {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  opacity: 0;
+  z-index: 0;
+  animation: ImageSlideShow 60s backwards infinite;
+}
+
+.Slideshow li:nth-child(1) {
+  background-image: url("../../../assets/images/pizza.jpg");
+}
+.Slideshow li:nth-child(2) {
+  background-image: url("../../../assets/images/dahi.jpg");
+  animation-delay: 6s;
+}
+.Slideshow li:nth-child(3) {
+  background-image: url("../../../assets/images/pizzaslice.jpg");
+  animation-delay: 12s;
+}
+.Slideshow li:nth-child(4) {
+  background-image: url("../../../assets/images/dosa.jpg");
+  animation-delay: 18s;
+}
+.Slideshow li:nth-child(5) {
+  background-image: url("../../../assets/images/pizzafull.jpg");
+  animation-delay: 24s;
+}
+.Slideshow li:nth-child(6) {
+  background-image: url("../../../assets/images/panipuri.jpg");
+  animation-delay: 30s;
+}
+.Slideshow li:nth-child(7) {
+  background-image: url("../../../assets/images/sweets.jpg");
+  animation-delay: 36s;
+}
+.Slideshow li:nth-child(8) {
+  background-image: url("../../../assets/images/dhokla.jpg");
+  animation-delay: 42s;
+}
+.Slideshow li:nth-child(9) {
+  background-image: url("../../../assets/images/coffee.jpg");
+  animation-delay: 48s;
+}
+.Slideshow li:nth-child(10) {
+  background-image: url("../../../assets/images/jalebi.jpg");
+  animation-delay: 54s;
+}
+
+@keyframes ImageSlideShow {
+  0% {
+    opacity: 0;
+    animation-timing-function: ease-in;
+  }
+  10% {
+    opacity: 1;
+    animation-timing-function: ease-out;
+  }
+  20% {
+    opacity: 1;
+  }
+  30% {
+    opacity: 0;
+  }
 }
