--- a/src/components/HomePage/Header/Header.module.css
+++ b/src/components/HomePage/Header/Header.module.css
@@ -4,7 +4,6 @@
   
 Header{
     width:100%;
-    height:60px;
     position:fixed;
     top:0;
     left:0;
@@ -12,32 +11,41 @@ Header{
     z-index:1000;
 }
 
-Header a {
+.Logo{
   text-decoration: none;
   color:white;
   font-weight: bold;
   font-size: 1.5rem;
-  position:absolute;
-  left:200px;
-  margin:16px;
+  margin-top:6px;
+  position: absolute;
+  left: 30px;
+  padding:10px;
   font-style: italic;
 }
 
-Header button{
-  border:2px solid white;
-  border-radius: 6px;
-  padding:10px;
-  margin:10px 20px;
-  color:white;
-  font-size:1rem;
-  float:right;
-  position: relative;
-  right:200px;
-  cursor:pointer;
-  background-color: transparent;
+@media (min-width:600px){
+
+ .Login, .Signup{
+    border:2px solid white;
+    border-radius: 6px;
+    padding:10px;
+    margin:10px 20px;
+    color:white;
+    font-size:1rem;
+    float: right;
+    cursor:pointer;
+    text-decoration: none;
+    background-color: transparent;
+  }
+  .Login:hover, .Signup:hover{
+    background-color: white;
+    color:black;
+  }
+
 }
 
-Header button:hover{
-  background-color: white;
-  color:black;
+@media (max-width:599){
+  .DesktopOnly, .Login, .Signup{
+    display: none;
+  }
 }
