Added Signup Login Modals

--- a/src/components/HomePage/Header/Header.module.css
+++ b/src/components/HomePage/Header/Header.module.css
@@ -33,6 +33,7 @@ Header{
     color:white;
     font-size:1rem;
     float: right;
+    outline:none;
     cursor:pointer;
     text-decoration: none;
     background-color: transparent;
